# Test

./: Hello World.sln
ChataApp-client/: CMakeLists.txt  resource.qrc
ChataApp-client/ChataApp-client/: .gitignore  CMakeLists.txt  resource.qrc
ChataApp-client/ChataApp-client/qml/: ChatItemDelegate.qml  ChatPage.qml  ChatView.qml  ImagePickerButton.qml  ImgPreviewWindow.qml  Main.qml  MessageDelegate.qml
ChataApp-client/ChataApp-client/source/: Buffer.cpp  Buffer.h  ChatItemListModel.cpp  ChatItemListModel.h  ChatSessionModel.cpp  ChatSessionModel.h  ConnectManager.cpp  CriticalSectionLock.cpp  CriticalSectionLock.h  FileTransManager.cpp  FileTransManager.h  FileTransferDownLoadTask.cpp  FileTransferDownLoadTask.h  FileTransferTask.cpp  FileTransferTask.h  FileTransferUpLoadTask.cpp  FileTransferUpLoadTask.h  LoginModel.cpp  LoginModel.h  ModelManager.cpp  ModelManager.h  MsgManager.cpp  MsgManager.h  QCustomTcpSession.cpp  QCustomTcpSession.h  QTCPClient.cpp  QTCPClient.h  RequestManager.cpp  RequestManager.h  SafeStl.h  SpinLock.cpp  SpinLock.h  UserInfoModel.cpp  main.cpp
ChataApp-client/lib/: leptonica-1.87.0.lib  llama.lib  tesseract55.lib
ChataApp-client/qml/: 3DModelViewer.qml  ChatPage.qml  ChatView.qml  FilePickerButton.qml  ImgPreviewWindow.qml  LlamaChatWindow.qml  LoadPage.qml  Main.qml  MessageDelegate.qml  TipPopup.qml  UserInfoDelegate.qml  videoPreviewWindow.qml
ChataApp-client/source/include/: 3DModelViewerModel.h  AIAssistantModel.h  AISummaryModel.h  ChatItemListModel.h  ChatSessionModel.h  ConnectManager.h  LlamaClient.h  LlamaModel.h  LlamaToolHelper.h  MessagePackage.h  ModelManager.h  MsgManager.h  NetWorkHelper.h  OCRModel.h  OCRProcess.h  RequestManager.h  UserInfoModel.h  stdafx.h
ChataApp-client/source/network/: Buffer.cpp  Buffer.h  CRC32Helper.cpp  CRC32Helper.h  CriticalSectionLock.cpp  CriticalSectionLock.h  FileIOHandler.cpp  FileIOHandler.h  FileTransManager.cpp  FileTransManager.h  FileTransferDownLoadTask.cpp  FileTransferDownLoadTask.h  FileTransferTask.cpp  FileTransferTask.h  FileTransferUpLoadTask.cpp  FileTransferUpLoadTask.h  QBaseNetWorkSession.cpp  QBaseNetWorkSession.h  QCustomTcpSession.cpp  QCustomTcpSession.h  QTCPClient.cpp  QTCPClient.h  SafeStl.h  SpinLock.cpp  SpinLock.h
ChataApp-client/source/src/: 3DModelViewerModel.cpp  AIAssistantModel.cpp  AISummaryModel.cpp  ChatItemListModel.cpp  ChatSessionModel.cpp  ConnectManager.cpp  LlamaClient.cpp  LlamaModel.cpp  LlamaToolHelper.cpp  MessagePackage.cpp  ModelManager.cpp  MsgManager.cpp  NetWorkHelper.cpp  OCRModel.cpp  OCRProcess.cpp  RequestManager.cpp  UserInfoModel.cpp  main.cpp
ChataApp-master/: README.md
ChataApp-server/ChataApp-server/: .gitignore
ChataApp-server/ChataApp-server/source/include/: FileRecordStore.h  FileTransManager.h  FileTransferDownLoadTask.h  FileTransferTask.h  FileTransferUploadTask.h  LoginUserManager.h  MessageRecordStore.h  MsgManager.h  stdafx.h
ChataApp-server/ChataApp-server/source/src/: ConnectManager.cpp  FileRecordStore.cpp  FileTransManager.cpp  FileTransferDownLoadTask.cpp  FileTransferTask.cpp  FileTransferUploadTask.cpp  LoginUserManager.cpp  MessageRecordStore.cpp  MsgManager.cpp  main.cpp
ChataApp-server/docs/: 消息文档.txt
ChataApp-server/source/include/: ConnectManager.h  FileIOHandler.h  FileRecordStore.h  FileTransManager.h  FileTransferDownLoadTask.h  FileTransferTask.h  FileTransferUploadTask.h  LoginUserManager.h  MessagePackage.h  MessageRecordStore.h  MsgManager.h  NetWorkHelper.h
ChataApp-server/source/src/: ConnectManager.cpp  FileIOHandler.cpp  FileRecordStore.cpp  FileTransManager.cpp  FileTransferDownLoadTask.cpp  FileTransferUploadTask.cpp  LoginUserManager.cpp  MessagePackage.cpp  MessageRecordStore.cpp  MsgManager.cpp  NetWorkHelper.cpp  main.cpp
Hello World/: Hello World.cpp  Hello World.vcxproj
